# ardage

./: .gitignore  LICENSE  README.md  ardage.py  arxiv_pdf2md.py  core.py  pyproject.toml  requirements.txt  setup.py
ardage/: __init__.py  cli.py  core.py
ardage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/md/: paper1.md  paper10.md  paper100.md  paper101.md  paper102.md  paper103.md  paper104.md  paper105.md  paper106.md  paper107.md  paper108.md  paper109.md  paper11.md  paper110.md  paper111.md  paper112.md  paper113.md  paper114.md  paper115.md  paper116.md  paper117.md  paper118.md  paper119.md  paper12.md  paper120.md  paper121.md  paper122.md  paper123.md  paper124.md  paper125.md  paper126.md  paper127.md  paper128.md  paper129.md  paper13.md  paper130.md  paper131.md  paper132.md  paper133.md  paper134.md  (+109 more)
