[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ardage"
version = "0.1.0"
description = "arXiv Dataset Generator - Download and convert academic papers to Markdown"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Harihar Prasad", email = "hariharprasad2006@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pymupdf4llm",
    "arxiv",
    "pymupdf",
    "tqdm",
]

[project.scripts]
ardage = "ardage.cli:cli_main"

[project.urls]
Homepage = "https://github.com/HariharPrasadd/ardage"